# django_rest_framework_learning

./: LICENSE  README.md  pyproject.toml
tutorial/quickstart/: serializers.py
tutorial/snippets/: models.py  serializers.py  urls.py  views.py
tutorial/snippets/migrations/: 0001_initial.py
tutorial/tutorial/: settings.py  urls.py
