[tool.poetry]
name = "django_rest_framework_learning"
version = "0.1.0"
description = ""
authors = ["demogi4523 <demogi4523@yandex.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.20.0"
Django = "^4.0.4"
djangorestframework = "^3.13.1"
Pygments = "^2.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
